==> Bob46Zhu/STM32F103_GIT/Test/src/SPI_FLASH/spi_flash.c <==
#include "spi_flash.h"

void SPI_FLASH_Init(void)
{
	SPI_InitTypeDef SPI_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;

	//使能SPI时钟
	FLASH_SPI_APBxClock_FUN(FLASH_SPI_CLK,ENABLE);
	//使能SPI引脚相关时钟
	FLASH_SPI_CS_APBxClock_FUN(FLASH_SPI_CS_CLK | FLASH_SPI_CS_CLK |
								FLASH_SPI_MISO_CLK | FLASH_SPI_MISO_CLK,ENABLE);

	//配置SPI的CS引脚，普通 IO即可
	GPIO_InitStructure.GPIO_Pin = FLASH_SPI_CS_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(FLASH_SPI_CS_PORT,&GPIO_InitStructure);

	//配置SPI的SCK引脚
	GPIO_InitStructure.GPIO_Pin = FLASH_SPI_SCK_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
	GPIO_Init(FLASH_SPI_SCK_PORT,&GPIO_InitStructure);

	//配置SPI的MISO引脚
	GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MISO_PIN;
	GPIO_Init(FLASH_SPI_MISO_PORT,&GPIO_InitStructure);

	//配置SPI的MOSI引脚
	GPIO_InitStructure.GPIO_Pin = FLASH_SPI_MOSI_PIN;
	GPIO_Init(FLASH_SPI_MOSI_PORT,&GPIO_InitStructure);


	//停止信号 flash:CS引脚高电平
	SPI_FLASH_CS_HIGH();

	//SPI模式配置
	//FLASH芯片支持SPI模式0及模式3，据此配置CPOL CPHA
	SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
	SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
	SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
	SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
	SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
	SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
	SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4;
	SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
	SPI_InitStructure.SPI_CRCPolynomial = 7;
	SPI_Init(FLASH_SPIx,&SPI_InitStructure);

	//使能SPI
	SPI_Cmd(FLASH_SPIx,ENABLE);

}

u8 SPI_FLASH_SendByte(u8 byte)
{
	SPITimeout = SPIT_FLAG_TIMEOUT;
	//等待发送缓冲区为空，TXE事件
	while(SPI_I2S_GetFlagStatus(FLASH_SPIx,SPI_I2S_FLAG_TXE) == RESET)
	{
		if((SPITimeout--) == 0)
		{
			return SPI_TIMEOUT_UserCallback(0);
		}
	}

	//写入数据寄存器，把要写入的数据写入发送缓冲区
	SPI_I2S_SendData(FLASH_SPIx,byte);
	SPITimeout = SPIT_FLAG_TIMEOUT;
	//等待接收缓冲区非空，RXNE事件
	while(SPI_I2S_GetFlagStatus(FLASH_SPIx,SPI_I2S_FLAG_RXNE) == RESET)
	{
		if((SPITimeout--) == 0)
		{
			return SPI_TIMEOUT_UserCallback(1);
		}
	}
	//读取数据寄存器，获取接收缓冲区数据
	return SPI_I2S_ReceiveData(FLASH_SPIx);
}
